Fix carousel margin on mobile

--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -805,14 +805,14 @@ a.carousel-control.right {
         }
     }
 }
-body.tistory_grid_1050 div#ttCanvas {
-    max-width: 1040px !important;
 
+// If we are on home page, make room for carousel
+body.tedition_blog .article_rep-container {
+    padding-left: 0;
+    padding-right: 0;
 }
-div#ttCanvas {
 
-    margin-left: -@grid-gutter-width / 2 !important;
-    margin-right: -@grid-gutter-width / 2 !important;
+div#ttCanvas {
 
     .tt-component {
         padding-left: @grid-gutter-width;
